--- a/toate-meniurile.html
+++ b/toate-meniurile.html
@@ -126,7 +126,7 @@
 				</div>
 				<div class="desp-40"></div>
 				<div class="marele">
-					<h3 class="red za-title">5 premii săptămănale</h3>
+					<h3 class="red za-title">5 premii speciale</h3>
 					<h2>Gama de<br />produse Cirio</h2>
 					<img src="img/oala.png" alt="" />
 				</div>
