--- a/meniul.html
+++ b/meniul.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Arena Bucatarasilor Selgros</title>
+        <title>Fa-ti Meniul cu CIRIO</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -198,7 +198,7 @@
 				</div>
 				<div class="desp-40"></div>
 				<div class="marele">
-					<h3 class="red za-title">5 premii săptămănale</h3>
+					<h3 class="red za-title">5 premii speciale</h3>
 					<h2>Gama de<br />produse Cirio</h2>
 					<img src="img/oala.png" alt="" />
 				</div>
